<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        Títulos
    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

    <string name="app_name">ControleDiabetes</string>
    <string name="title_calcular_bolus">Calcular Bolus</string>
    <string name="title_registros">Registros</string>
    <string name="title_registro">Registro</string>
    <string name="title_blocos_de_tempo">Blocos de Tempo</string>
    <string name="title_bloco_de_tempo">Bloco de Tempo</string>
    <string name="title_eventos">Eventos</string>
    <string name="title_configuracao">Configuração</string>
    <string name="title_glicemias">Glicemias</string>
    <string name="title_glucose_meal_report">Refeições</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -
            Utilizado pela preferencias (SharePreferences)
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

    <string name="pref_glicemia_alta_title">Glicemia Alta (HiperGlicemia)</string>
    <string name="pref_glicemia_baixa_title">Glicemia Baixa (HipoGlicemia)</string>
    <string name="pref_glicemia_normal_title">Glicemia Normal</string>

    <string name="pref_glicemia_alta_key" translatable="false">glicemia_Alta</string>
    <string name="pref_glicemia_baixa_key" translatable="false">glicemia_Baixa</string>
    <string name="pref_glicemia_normal_key" translatable="false">glicemia_Normal</string>

    <string name="pref_glicemia_alta_default_value">140</string>
    <string name="pref_glicemia_baixa_default_value">60</string>
    <string name="pref_glicemia_normal_default_value">100</string>

    <string name="pref_glicemia_alta_summary">Valor de início da glicemia considerada alta.</string>
    <string name="pref_glicemia_baixa_summary">Valor de início da glicemia considerada baixa.</string>

    <string name="pref_glicemias_key">glicemias</string>
    <string name="pref_glicemias_title">Glicemias</string>
    <string name="pref_glicemias_summary">Configura os níveis de glicemia (alta, normal e baixa)</string>

    <string name="pref_bloco_de_tempo_key">blocos_de_tempo</string>
    <string name="pref_bloco_de_tempo_title">Bloco de tempo</string>
    <string name="pref_bloco_de_tempo_summary">Configuração de blocos de tempo para o cáculo de insulina rápida.</string>

    <string name="pref_backup_key">backup</string>
    <string name="pref_backup_title">Backup</string>
    <string name="pref_backup_summary">Cria e restaura backups dos dados do Aplicativo.</string>

    <string name="pref_backup_autobackup_category_key">backup_autobackup_category_key</string>
    <string name="pref_backup_autobackup_category_title">Backup Automatico</string>
    <string name="pref_backup_autobackup_key">pref_backup_autobackup_key</string>
    <string name="pref_backup_autobackup_title">Ativar Backup Automatico</string>
    <string name="pref_backup_list_peri_key">pref_backup_list_peri_key</string>
    <string name="pref_backup_list_peri_title">Periodo</string>
    <string name="pref_backup_list_peri_summary">Selecione de quanto em quanto tempo o backup sera criado.</string>

    <string name="pref_backup_adm_category_key">backup_adm_category_key</string>
    <string name="pref_backup_adm_category_title">Administracao de Backup</string>

    <string name="pref_backup_create_key">backup_create_key</string>
    <string name="pref_backup_create_title">Criar Backup</string>
    <string name="pref_backup_create_summary">Fazer um Backup de todos os dados.</string>

    <string name="pref_backup_restore_key">backup_restore_key</string>
    <string name="pref_backup_restore_title">Recuperar Dados</string>
    <string name="pref_backup_restore_summary">Recuperar os dados apartir de um backup criado anteriormente.</string>


    <string name="pref_bolus_select_graduation_category_key">bolus_select_graduation_category_key</string>
    <string name="pref_bolus_select_graduation_category_title">Graduação de sua seringa ou caneta de insulina</string>
    <string name="pref_bolus_list_graduation_key">bolus_select_graduation_key</string>
    <string name="pref_bolus_list_graduation_title">Graduação Selecionada:</string>
    <string name="pref_bolus_list_graduation_summary">Selecione de quanto em quanto é a marca sua seringa ou caneta de insulina: </string>

    <string name="pref_bolus_select_method_category_key">bolus_select_method_key</string>
    <string name="pref_bolus_select_method_category_title">Método para encontrar a quantidade de insulina</string>
    <string name="pref_bolus_list_method_key">bolus_list_method_key</string>
    <string name="pref_bolus_list_method_title">Método selecionado:</string>
    <string name="pref_bolus_list_method_summary">Método utilizado para encontrar a quantidade de insulina necessária para o bólus: </string>


    <string name="pref_bolus_configure_method_category_key">bolus_configure_method_key</string>
    <string name="pref_bolus_configure_method_category_title">Configuração dos Métodos</string>

    <string name="pref_bolus_configure_table_key">bolus_configure_table_key</string>
    <string name="pref_bolus_configure_table_title">Tabela de Insulina</string>
    <string name="pref_bolus_configure_table_summary">Configura a tabela de insulina conforme a glicemia e a refeição.</string>

    <string name="pref_bolus_configure_calculate_key">bolus_configure_calculate_key</string>
    <string name="pref_bolus_configure_calculate_title">Cáculo de bolus</string>
    <string name="pref_bolus_configure_calculate_summary">Configura blocos de tempo com informações necessárias para o cáculo de insulina do bólus.</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -
            Utilizado como clunas de base de dados e rótulos
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

    <string name="meals_name_breakfast">Café da manhã</string>
    <string name="meals_name_brunch">Colação</string>
    <string name="meals_name_Lunch">Almoço</string>
    <string name="meals_name_tea">Lanche da tarde</string>
    <string name="meals_name_dinner">Jantar</string>
    <string name="meals_name_supper">Ceia</string>
    <string name="meals_name_dawn">Madrugada</string>
</resources>
