<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_glicemias_key"
        android:title="@string/pref_glicemias_title"
        android:summary="@string/pref_glicemias_summary">
    <intent android:targetPackage="br.com.bwsystemssolutions.controlediabetes"
        android:targetClass="br.com.bwsystemssolutions.controlediabetes.GlucoseActivity" />
    </Preference>

    <Preference
        android:key="@string/pref_bloco_de_tempo_key"
        android:title="@string/pref_bloco_de_tempo_title"
        android:summary="@string/pref_bloco_de_tempo_summary">
        <intent android:targetPackage="br.com.bwsystemssolutions.controlediabetes"
            android:targetClass="br.com.bwsystemssolutions.controlediabetes.BolusCalculateConfig" />
    </Preference>

    <Preference
        android:key="@string/pref_backup_key"
        android:title="@string/pref_backup_title"
        android:summary="@string/pref_backup_summary">
        <intent android:targetPackage="br.com.bwsystemssolutions.controlediabetes"
            android:targetClass="br.com.bwsystemssolutions.controlediabetes.BackupActivity" />
    </Preference>

</PreferenceScreen>